Fixing text apperance on mobile

--- a/src/style/details.css
+++ b/src/style/details.css
@@ -1,6 +1,7 @@
 .details-section{
   border: 10px solid orange;
   display: flex;
+  padding: 4vw;
   flex-direction: column;
   justify-content: center;
 }
