--- a/src/style/services.css
+++ b/src/style/services.css
@@ -1,7 +1,7 @@
 .service-options {
  justify-items: center;
- min-width: 50%;
- max-width: 50%;
+ /* min-width: 50%;
+ max-width: 50%; */
  margin: auto;
 }
 
@@ -9,20 +9,22 @@
  padding-bottom: 2rem;
 }
 h2{
- font-size: 2vw;
+ font-size: 3vw;
+ padding: 2em;
 }
 
 h2 a{
  display: flex;
  justify-content: space-between;
- padding: 1rem;
  border-bottom: 2px solid orange;
  color: white;
  text-decoration: none;
 }
 
-li{
- font-size: 1vw;
+.services-offered{
+ font-size: 2vw;
+ padding: 1vw;
+ /* border: 2px solid orange; */
 }
 
 .schedule-service{
@@ -34,7 +36,7 @@ li{
  margin-top: 2rem;
  background-color: orange;
  color: white;
- font-size: 1vw;
+ font-size: 1.5vw;
  font-weight: 600;
  min-width: 50%;
  max-width: 2rem;
